// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline renders consistently 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
/>
`;

exports[`Timeline renders with clipSidebar prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .Timeline-Item:first-child {
  padding-top: 0;
}

.c0 .Timeline-Item:last-child {
  padding-bottom: 0;
}

<div
  className="c0"
/>
`;

exports[`Timeline.Badge renders consistently 1`] = `
.c0 {
  position: relative;
  z-index: 1;
}

.c1 {
  margin-right: 8px;
  margin-left: -15px;
  color: #586069;
  background-color: #e1e4e8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  width: 32px;
  height: 32px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  border: 2px solid #ffffff;
}

<div
  className="c0"
>
  <div
    className="c1 TimelineItem-Badge"
    color="icon.secondary"
    display="flex"
    height="32px"
    overflow="hidden"
    width="32px"
  />
</div>
`;

exports[`Timeline.Item renders consistently 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 16px 0;
  margin-left: 16px;
}

.c0::before {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: block;
  width: 2px;
  content: '';
  background-color: hsla(214,13%,93%,1);
}

<div
  className="c0 Timeline-Item"
/>
`;

exports[`Timeline.Item renders with condensed prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding: 16px 0;
  margin-left: 16px;
  padding-top: 4px;
  padding-bottom: 0;
}

.c0::before {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: block;
  width: 2px;
  content: '';
  background-color: hsla(214,13%,93%,1);
}

.c0:last-child {
  padding-bottom: 16px;
}

.c0 .TimelineItem-Badge {
  height: 16px;
  margin-top: 8px;
  margin-bottom: 8px;
  color: #959da5;
  background-color: #ffffff;
  border: 0;
}

<div
  className="c0 Timeline-Item"
/>
`;
